--- a/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
@@ -810,6 +810,61 @@ int main() {
 1 1 2
 </pre>
   <code>-1</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;int&gt; A;
+  int tmp;
+  for (int i = 0; i &lt; n; i++) {
+    cin >> tmp;
+    A.push_back(tmp);
+  }
+
+  // решение
+  int res = A[0];
+  int flag1 = 0;
+  int flag2 = 0;
+  int cnt = 0;
+  for (int i = 1; i &lt; n; i++) {
+    if (A[i] == A[i - 1]) {
+      if (flag2) {
+        res = -1;
+        break;
+      }
+      flag1 = 1;
+      res += A[i];
+    } else {
+      if (flag1) {
+        res = -1;
+        break;
+      }
+      flag2 = 1;
+      res += A[i];
+      if (A[i] - A[i - 1] == 1) {
+        cnt++;
+      }
+    }
+  }
+
+  if (cnt == n - 1) {
+    res *= 2;
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -836,6 +891,39 @@ int main() {
   <h4>Пример 2</h4>
   <code>32520</code>
   <code>1</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Цифры 0, 4, 6, 9 содержат одну замкнутую фигуру, а цифра 8 две.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  string s;
+  cin >> s;
+
+  // решение
+  int res = 0;
+  for (char c : s) {
+    switch (c) {
+      case '0':
+      case '4':
+      case '6':
+      case '9': res += 1;
+                break;
+      case '8': res += 2;
+                break;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
